Implemented endpoints DELETE/users/ GET /transactions/ DELETE /transactions/ DELETE /sessions/ POST /banks/transactions/
